--- a/certificates.html
+++ b/certificates.html
@@ -4,63 +4,92 @@
 <meta charset="utf-8">
 <meta name="keyword" content="beauty salon,queen,سالن زیبایی">
 <title>سالن زیبایی ملکه زیبایی</title>
-<link rel="stylesheet" type="text/css" href="css/nav.css">	
+<link rel="stylesheet" type="text/css" href="css/nav.css">
+<style type="text/css">
+	
+	.div-left{
+	    width:50%; 
+		height:1100px; 
+		display:inline-block; 
+		float:left; 
+		background-image:url('Images/IMG_6170.JPG'); background-repeat:no-repeat; 
+		background-attachment: fixed; 
+		background-size: 50%;
+		padding-top:60px; 
+		padding-bottom: 20px; 
+		opacity: 0.9;
+	}
+	
+	.div-right{
+		width:47%; 
+		display:inline-block;
+		float:left; 
+		padding-top:40px;
+	}
+	
+</style>
 </head>
 
 <body>
  <header >
-    	<nav>
-		  <ul>
-    		<li><a href="index.html">صفحه نخست</a></li>
-    		<li><a href="index.html#introduction">معرفی</a></li>
-    		<li><a href="services.html">خدمات</a></li>
-    		<li><a href="articles.html">مقالات</a></li>
-    		<li><a href="book.html">رزرو نوبت</a></li>
-    		<li><a href="certificates.html">گواهینامه ها</a></li>
-    		<li><a href="book.html#contact">تماس با ما</a></li>
-    	  </ul>
-	   </nav>
-    </header>
+    <nav>
+	  <ul>
+    	<li><a href="index.html">صفحه نخست</a></li>
+    	<li><a href="index.html#introduction">معرفی</a></li>
+    	<li><a href="services.html">خدمات</a></li>
+    	<li><a href="articles.html">مقالات</a></li>
+    	<li><a href="book.html">رزرو نوبت</a></li>
+    	<li><a href="certificates.html">گواهینامه ها</a></li>
+    	<li><a href="book.html#contact">تماس با ما</a></li>
+       </ul>
+	  </nav>
+  </header>
 	
   <main style="margin-top:100px; width:100%">
-	<div style="width:50%; height:1100px; display:inline-block; float:left; background-image:url('Images/IMG_6170.JPG'); background-repeat:no-repeat; background-attachment: fixed; background-size: 50% ;padding-top:60px; padding-bottom: 20px; opacity: 0.9">
-	
-		<img src="Images/Certificates-of-International-Academies.jpg" alt="" style="width:20%; position:absolute; left:15%">
+	<div class="div-left">
+			
+		<img src="Images/Certificates-of-International-Academies.jpg" alt="" style="width:40%; padding-left:30%; padding-right:28%">
 		
-		<img src="Images/34_thumb.jpg" alt="" style="width:15%; position:absolute; left:7%; margin-top:20%">
-		<img src="Images/1-339x480.jpg" alt="" style="width:14%; position:absolute; left:29%; margin-top:20%">
-	
-		<img src="Images/Untitled-9.jpg" alt="" style="width:20%; position:absolute; left:15%; margin-top:45%;">
+		<div style="clear:both"></div>
 		
-		<img src="Images/hour_of_code_certificate1-1024x707.jpg" alt="" style="width:20%; position:absolute; left:15%; margin-top:65%">
-		</div>
+		<img src="Images/34_thumb.jpg" alt="" style="width:30%; padding-left:13%; margin-top:10%; display:inline-block; float:left">
 		
+		<img src="Images/1-339x480.jpg" alt="" style="width:28%; padding-left:13%; margin-top:10%; display:inline-block; float:left">
 		
-		<div style="width:47%; display:inline-block; float:left; padding-top:40px">
+		<div style="clear:both"></div>
+		
+		<img src="Images/Untitled-9.jpg" alt="" style="width:40%; padding-left:28%; margin-top:10%; display:inline-block; float:left">
+		
+		<div style="clear:both"></div>
+		
+		<img src="Images/hour_of_code_certificate1-1024x707.jpg" alt="" style="width:40%; padding-left:29%; margin-top:10%; display:inline-block; float:left">
+	</div>
+	<div class="div-right">
 		<h2 style="text-align: center">گواهینامه ها و دوره های بین المللی</h2>
-		<p style="font-size:20px;line-height: 50px; text-align: right">
+		<p style="font-size:20px;line-height: 50px; text-align: right; padding:3%">
 		آرایشگاه ملکه زیبایی بعنوان یک سالن زیبایی چند ملیتی با هدف توسعه هنرهای پیشرفته آرایشگری در سال 1996 میلادی تاسیس شد.<br>
-        این مرکز هم‌چنین به عنوان یکی از اعضای رسمی و اصلی انجمن های زیبایی در کشورهای امارات، ترکیه، روسیه،  برزیل و آلمان با برگزاری دوره های آکادمیک در سطح بین الملل آخرین علوم، تکنیک‌ها و سبک‌های روز دنیا را مورد آموزش قرار می‌دهد .
-        <br>
-        ملکه زیبایی یک آرایشگاه بین‌المللی است، و براساس به روزترین و  پیشرفته‌ترین متد ها خدمات صورت می‌گیرد.
-        <br>
-        گواهینامه هایی که ملکه زیبایی کسب کرده است جزو معتبرترین گواهینامه ها و به همراه یک کد ریجستری که بصورت بین‌المللی  در بیش از 34 کشور قابل استفاده بوده و مورد تایید سفارت کشور مورد نظر می‌باشد. 
-	    <br>
-        این آرایشگاه پیشرفته دوره‌های آرایشگری حرفه ای را  در 5 کشور به ترتیب، ایران، امارات، مالزی، ترکیه، برزیل و روسیه در سه سطح توکن ، پرفکتال و مستر گذرانده است. 
-	   <br>
-       اگر شما علاقه مند به برخورداری از آرایشگری با آخرین و بهترین متدهای روزدنیا هستید آرایشگاه ملکه زیبایی بهترین گزینه می باشد.
-	   <br>
-       دراین مرکز  19 لاین تخصصی در زمینه‌های زیبایی ، مراقبتی ، آرایشگری  انجام می شود.
-       <br>
-       آرایشگرانی که در این آرایشگاه عالی به فعالیت مشغول هستند، هر ساله در کشو های اروپایی، آمریکای لاتین و آسیا آموزش و به روزرسانی می‌شوند تا جدیدترین نکات را بتوانند ارائه دهند. 
-       </p>
-       </div>
-	   <div style="clear: both"></div>
+    	 این مرکز هم‌چنین به عنوان یکی از اعضای رسمی و اصلی انجمن های زیبایی در کشورهای امارات، ترکیه، روسیه،  برزیل و آلمان با برگزاری دوره های آکادمیک در سطح بین الملل آخرین علوم، تکنیک‌ها و سبک‌های روز دنیا را مورد آموزش قرار می‌دهد .
+     	 <br>
+     	 ملکه زیبایی یک آرایشگاه بین‌المللی است، و براساس به روزترین و  پیشرفته‌ترین متد ها خدمات صورت می‌گیرد.
+     	 <br>
+    	 گواهینامه هایی که ملکه زیبایی کسب کرده است جزو معتبرترین گواهینامه ها و به همراه یک کد ریجستری که بصورت بین‌المللی  در بیش از 34 کشور قابل استفاده بوده و مورد تایید سفارت کشور مورد نظر می‌باشد. 
+		 <br>
+     	 این آرایشگاه پیشرفته دوره‌های آرایشگری حرفه ای را  در 5 کشور به ترتیب، ایران، امارات، مالزی، ترکیه، برزیل و روسیه در سه سطح توکن ، پرفکتال و مستر گذرانده است. 
+	   	 <br>
+    	 اگر شما علاقه مند به برخورداری از آرایشگری با آخرین و بهترین متدهای روزدنیا هستید آرایشگاه ملکه زیبایی بهترین گزینه می باشد.
+		 <br>
+    	 دراین مرکز  19 لاین تخصصی در زمینه‌های زیبایی ، مراقبتی ، آرایشگری  انجام می شود.
+    	 <br>
+    	 آرایشگرانی که در این آرایشگاه عالی به فعالیت مشغول هستند، هر ساله در کشو های اروپایی، آمریکای لاتین و آسیا آموزش و به روزرسانی می‌شوند تا جدیدترین نکات را بتوانند ارائه دهند. 
+    	 </p>
+   </div>
+   <div style="clear: both"></div>
   </main>
 	
   <footer>
-	  <br>
-	Designed by <a href="mailto:mariam59@gmail.com"><span style="font-size:22px"><i>M@ri@M Rezvandoost</i></span></a>  &copy; 2021
+    <br>Designed by
+	<a href="mailto:mariam59[@]gmail[dot]com">
+	<span style="font-size:22px"><i>M@ri@M Rezvandoost</i></span></a> &copy; 2021  
   </footer>
 </body>
 </html>
