--- a/services.html
+++ b/services.html
@@ -6,65 +6,93 @@
 <title>سالن زیبایی ملکه زیبایی</title>
 <link rel="stylesheet" type="text/css" href="css/nav.css">
 	<style>
-	.class-p{
-    font-size: 20px;
-    font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
-    line-height: 30px;
-	padding:5%;
-     	}
 		
-	.class-a{
-	color:#F86363;
-	display:block;
+		section {
+			width:75%; 
+			height:450px; 
+			background-image:url('Images/IMG_9402.JPG'); float:left; 
+			background-repeat: no-repeat; 
+			background-size:100%;
 		}
+		
+		aside {
+			width:23%; 
+			height:450px; 
+			float:right; 
+			background-image:url('Images/IMG_6310.JPG'); background-attachment: fixed; 
+			background-position:right;
+		}
+		
+   	.class-p {
+    	    font-size: 20px;
+    	    font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", "serif";
+   		    line-height: 30px;
+		    padding:5%;
+     }
+		
+	.class-a {
+			color:#F86363;
+			display:block;
+	}
 	
-	.class-aside{
-	color:black;
-	font-size: 22px;		
-		}
-	img{
-    width: 30%;
-    display: inline-block;
-    float: right;
-    padding: 1.5%;
-    	}
+	.class-aside {
+			color:black;
+			font-size: 22px;		
+	}
+		
+	img {
+   	    width: 30%;
+    	display: inline-block;
+    	float: right;
+    	padding: 1.5%;
+    }
+		
+	aside nav ul li a:hover {
+		background-color:rgba(248,228,228,0.00);
+		padding:3px;
+	    border-radius: 3px;
+    }
+
+	aside nav ul li a:visited {
+	color:darkblue;
+    }
+
+		
     </style>
 </head>
 
 <body>
   <header >
-    	<nav>
-		  <ul>
-    		<li><a href="index.html">صفحه نخست</a></li>
-    		<li><a href="index.html#introduction">معرفی</a></li>
-    		<li><a href="services.html">خدمات</a></li>
-    		<li><a href="articles.html">مقالات</a></li>
-    		<li><a href="book.html">رزرو نوبت</a></li>
-    		<li><a href="certificates.html">گواهینامه ها</a></li>
-    		<li><a href="book.html#contact">تماس با ما</a></li>
-    	  </ul>
-	   </nav>
+    <nav>
+	   <ul>
+    	 <li><a href="index.html">صفحه نخست</a></li>
+    	 <li><a href="index.html#introduction">معرفی</a></li>
+    	 <li><a href="services.html">خدمات</a></li>
+    	 <li><a href="articles.html">مقالات</a></li>
+    	 <li><a href="book.html">رزرو نوبت</a></li>
+    	 <li><a href="certificates.html">گواهینامه ها</a></li>
+    	 <li><a href="book.html#contact">تماس با ما</a></li>
+    	</ul>
+	  </nav>
     </header>
 	
   <main style="margin-top:100px; width:100%">
-	
-	  <section style="width:75%; height:450px; background-image:url('Images/IMG_9402.JPG'); float:left; background-repeat: no-repeat; background-size:100%">
-		  <h1 style="padding-right: 5%; padding-top: 5%">درباره ما و خدمات ما</h1>
-		<p class="class-p" style="padding-top: 2%">
-		 آرایشگاه ملکه زیبایی با مدیریت خانم گیتی
-			<br>
-			خدمات حرفه ای آرایش و زیبایی را شامل 
-			<br>
-			آرایشگاه عروس, خدمات ناخن, رنگ مو, شینیون مو فانتزی و کلاسیک, براشینگ و کرلی مو,اصلاح و  وکس صورت و گردن, ابرو, سالن اپیلاسیون بدن را با امکانات کامل و با 15 سال سابقه به همشهریان و هم میهنان عزیز ارائه می نماید.
-			<br>
-با این تفاوت که در حوزه خدمات سلامت، زیبایی و آرایش را به شکلی نوین ارائه کند. 
-			<br>
-			مشتریان می توانند برای دریافت خدمات زیبایی در منزل از طریق وبسایت و اپلیکیشن ملکه زیبایی ثبت سفارش کنند. 
+    <section>
+      <h1 style="padding-right: 5%; padding-top: 5%">خدمات آرایشگاه ملکه  زیبایی:</h1>
+	   <p class="class-p" style="padding-top: 2%">
+	   آرایشگاه ملکه زیبایی با مدیریت خانم گیتی
+	   <br>
+	   خدمات حرفه ای آرایش و زیبایی را شامل 
+	   <br>
+		آرایشگاه عروس, خدمات ناخن, رنگ مو, شینیون مو فانتزی و کلاسیک, براشینگ و کرلی مو,اصلاح و  وکس صورت و گردن, ابرو, سالن اپیلاسیون بدن را با امکانات کامل و با 15 سال سابقه به همشهریان و هم میهنان عزیز ارائه می نماید.
+		<br>با این تفاوت که در حوزه خدمات سلامت، زیبایی و آرایش را به شکلی نوین ارائه کند. 
+		<br>
+		مشتریان می توانند برای دریافت خدمات زیبایی در منزل از طریق وبسایت و اپلیکیشن ملکه زیبایی ثبت سفارش کنند. 
  		<br><br>
-			برای مشاهده نمونه کارها, گزینه مورد نظر را از منوی سمت راست, انتخاب کنید.
-		  </p>
-	  </section>
-	  <aside style="width:23%; height:450px; float:right; background-image:url('Images/IMG_6310.JPG'); background-attachment: fixed; background-position:right">
+		برای مشاهده نمونه کارها, گزینه مورد نظر را از منوی سمت راست, انتخاب کنید.
+	    </p>
+	 </section>
+	 <aside>
 		  <nav>
 			<ul>
     		<li><a href="#bride" class="class-aside">آرایش عروس</a></li>
@@ -81,12 +109,12 @@
 			  <br>
     		<li><a href="#eyebrow" class="class-aside">اصلاح و ابرو</a></li>
     	  </ul>
-	   </nav>
+	    </nav>
 	  </aside>
-	 <div style="clear:both"></div> 
-	  <hr>
+	  <div style="clear:both"></div>
+      <hr>
 	  <br>
-	  <p style="padding-right:3%"><a name="bride">نمونه کارهای ما:</a></p>
+	  <p style="padding-right:3%"><a name="bride">نمونه کارها :</a></p>
 	  <div style="width:100%; height:auto">
 	  <ul>
 	  	<li>
@@ -100,12 +128,10 @@
 			<a href="#top" style="color:darkblue; font-size: 18px; float:left; display:inline-block">بازگشت</a>
 			<a name="makeup" class="class-a"></a>
 	  	</li>
-		  <hr>
-		  
-		  <br>
+	    <hr>
+	    <br>
 	  	<li>
-			
-	  		<h2 style="color:#F86363">میکاپ</h2>
+			<h2 style="color:#F86363">میکاپ</h2>
 	  		<div style="width:100%; margin:auto">
 			<img src="Images/make up/IMG_6304.JPG" alt="">
 			<img src="Images/make up/IMG_6305.JPG" alt="">
@@ -114,8 +140,8 @@
 			<div style="clear: both"></div>
 	  		<a href="#top" style="color:darkblue; font-size: 18px; float:left; display:inline-block">بازگشت</a><a name="style" class="class-a"></a>
 	  	</li>
-		  <hr>
-		  <br>
+		<hr>
+		<br>
 	  	<li>
 	  		<h2  style="color:#F86363">شینیون</h2>
 	  		<div style="width:100%; margin:auto">
@@ -127,8 +153,8 @@
 	  		<a href="#top" style="color:darkblue; font-size: 18px; float:left; display:inline-block">بازگشت</a>
 			<a name="color" class="class-a"></a>
 	  	</li>
-		  <hr>
-		  <br>
+		<hr>
+		<br>
 	  	<li>
 	  		<h2  style="color:#F86363">رنگ مو</h2>
 	  		<div style="width:100%; margin:auto">
@@ -140,8 +166,8 @@
 	  		<a href="#top" style="color:darkblue; font-size: 18px; float:left; display:inline-block">بازگشت</a>
 			<a name="nail" class="class-a"></a>
 	  	</li>
-		  <hr>
-		  <br>
+		<hr>
+		<br>
 	  	<li>
 	  		<h2 style="color:#F86363">طراحی ناخن</h2>
 	  		<div style="width:100%; margin:auto">
@@ -153,8 +179,8 @@
 	  		<a href="#top" style="color:darkblue; font-size: 18px; float:left; display:inline-block">بازگشت</a>
 			<a name="brush" class="class-a"></a>
 	  	</li>
-		  <hr>
-		  <br>
+	    <hr>
+		<br>
 		<li>
 	  		<h2 style="color:#F86363">براشینگ</h2>
 	  		<div style="width:100%; margin:auto">
@@ -166,8 +192,8 @@
 	  		<a href="#top" style="color:darkblue; font-size: 18px; float:left; display:inline-block">بازگشت</a>
 			<a name="eyebrow" class="class-a"></a>
 	  	</li>
-		  <hr>
-		  <br>
+		<hr>
+		<br>
 	  	<li>
 	  		<h2 style="color:#F86363">اصلاح و ابرو</h2>
 	  		<div style="width:100%; margin:auto">
@@ -181,11 +207,11 @@
 	  </ul>
 	  </div>
   </main>
-	<div style="clear: both"></div>
+  <div style="clear: both"></div>
   <footer>
-	  <br>
-	 Designed by <a href="mailto:mariam59@gmail.com"><span style="font-size:22px"><i>M@ri@M Rezvandoost</i></span></a>  &copy; 2021
-	  
+	  <br>Designed by
+	  <a href="mailto:mariam59[@]gmail[dot]com">
+	  <span style="font-size:22px"><i>M@ri@M Rezvandoost</i></span></a> &copy; 2021  
   </footer>
 </body>
 </html>
